--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
                 <div class="profile-icon">
                     <i class="fas fa-user"></i>
                 </div>
-                <div>Nguyen Minh Tung</div>
+                <div>Maxim</div>
             </div>
             <!-- list section -->
             <div class="sidenav-list">
@@ -117,14 +117,14 @@
                 <!-- SEARCH AND REMINDER BUTTON -->
                 <div class="topnav-btn">
                     <div class="search"><a href="#"><i class="fas fa-search"></i></a></div>
-                    <div class="reminder"><a href="#"><i class="fas fa-bell"></i></a></div>
+                    <div class="reminder"><img src="/public/assets/img/logout.png" alt="Log out"></i></a></div>
                 </div>
             </div>
 
             <!-- HEADER -->
             <div class="header">
                 <div class="greeting">
-                    <h1>What's up, TungHTML</h1>
+                    <h1>What's up, Maxim?</h1>
                 </div>
                 <div class="categories">
                     Categories
