--- a/public/index.html
+++ b/public/index.html
@@ -94,9 +94,9 @@
                 <ul>
                     <li><a href=""><i class="fas fa-home"></i>Home</a></li>
                     <li><a href=""><i class="fas fa-briefcase"></i>Business tasks</a></li>
-                    <li><a href=""><i class="fas fa-wallet"></i>Personal tasks</a></li>
+                    <li><a href=""><i class="fas fa-screwdriver"></i>Personal tasks</a></li>
                     <li><a href=""><i class="fas fa-chart-line"></i>Analytics</a></li>
-                    <li><a href=""><i class="fas fa-screwdriver"></i>Settings</a></li>
+                    <li><a href=""><i class="fas fa-wallet"></i>Log out</a></li>
                 </ul>
             </div>
             <!-- waves -->
